objects/PAYBASE2__Record_Type_Routing__c.object
<CustomObject>
    <description>Used to configure which page should be used when creating, editing or viewing an object with a particular record type.  

You should not edit the contents unless instructed to by Payonomy, or you could render the application unusable</description>
    <fields>
        <fullName>PAYBASE2__Edit_Page__c</fullName>
        <description>The page to be displayed when editing an object with the specified record type.  May be &quot;VIEW&quot; if the record should not be edited.  If not specified, the default page will be used</description>
        <label>Edit Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYBASE2__New_Page__c</fullName>
        <description>The page to be displayed when creating an object with the specified record type.  If not specified, the default page will be used</description>
        <label>New Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYBASE2__Record_Type_Id_U__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The record type of the object</description>
        <label>Record Type Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PAYBASE2__Record_Type_Id__c</fullName>
        <description>This field is redundant and should never be used</description>
        <label>Old Record Type Id</label>
        <length>1</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PAYBASE2__View_Page__c</fullName>
        <description>The page to be displayed when viewing an object with the specified record type. If not specified, the default page will be used</description>
        <label>View Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Payonomy Record Type Routing</label>
    <listViews>
        <fullName>PAYBASE2__All</fullName>
        <columns>NAME</columns>
        <columns>PAYBASE2__Record_Type_Id__c</columns>
        <columns>PAYBASE2__Edit_Page__c</columns>
        <columns>PAYBASE2__New_Page__c</columns>
        <columns>PAYBASE2__View_Page__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payonomy Record Type Routing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payonomy Record Type Routings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>